# test_api_guru

./: .compose.yaml.kate-swp  .dockerignore  .flake8  .gitignore  README.md  answer_1_2.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 6e04f9591c47_initial_database_schema.py
postgres/: init.sql
src/: main.py
src/api/v1/: __init__.py  orders.py
src/configs/: __init__.py  db.py  logger_config.py  settings.py
src/controllers/: order_controller.py
src/models/: __init__.py  category.py  client.py  order.py  product.py
src/repositories/: order.py
src/schemas/: schemas.py
src/services/: logger_config.py  order_service.py
